Remove confirmation dialog when cutting or deleting items with children

A confirmation dialog will appear if the selected item that is being cur or 
contains child items. This is unnecessary because changes are not actually
applied until you explicitly save them.

BUG: 483079
FIXED-IN: 6.1